--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "mongoose": "^5.0.12",
-    "morgan": "~1.9.0",
-    "nodemon": "^1.17.3"
+    "mongoose": "^5.4.13",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.10"
   }
 }
