--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "config": "^3.2.4",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.17.0",
+    "grant": "^4.7.0",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1"
   },
