--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "dev": "export NODE_ENV=development && export DEBUG=app* && nodemon ./bin/www"
   },
   "dependencies": {
-    "config": "^3.2.4",
+    "@sentry/node": "^5.15.4",
+    "config": "^3.3.1",
     "connect-mongo": "^3.2.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
     "express-session": "^1.17.0",
     "grant-express": "^4.7.0",
-    "mongoose": "^5.7.5",
-    "morgan": "^1.9.1"
+    "mongoose": "^5.9.9",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
